--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					</header>
 					<p>Se tiver a vontade considere ajudar.</p>
 					<ul class="actions special">
-						<li><a href="#" class="button wide primary">Sign Up</a></li>
+						<li><a href="signup.html" class="button wide primary">Sign Up</a></li>
 						<li><a href="#" class="button wide">Learn More</a></li>
 					</ul>
 				</div>
