--- a/signup.html
+++ b/signup.html
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="form-wrapper">
                 <h2>Cadastro</h2>
-                <form id="signupForm" action="/signup" method="POST"> <div class="form-group">
+                <form id="signupForm" action="/login" method="POST"> <div class="form-group">
                         <label for="signup-username">Nome de Usuário:</label>
                         <input type="text" id="signup-username" name="username" required>
                     </div>
