--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<p>Όχι, ο Χρόνος δεν είναι ο άρχοντας της γνώσης<br />
 					</p>
 					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
+						<li><a href="#one" class="button scrolly">Conheça!</a></li>
 					</ul>
 				</div>
 			</section>
