--- a/signup.html
+++ b/signup.html
@@ -112,7 +112,7 @@
 
             <div class="form-wrapper">
                 <h2>Login</h2>
-                <form id="loginForm" action="/login" method="POST"> <div class="form-group">
+                <form id="loginForm" method="POST"> <div class="form-group">
                         <label for="login-username">Nome de Usuário ou Email:</label>
                         <input type="text" id="login-username" name="username_or_email" required>
                     </div>
