--- a/signup.html
+++ b/signup.html
@@ -1,174 +1,18 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro e Login - WZZM Escolar</title>
-    <link rel="stylesheet" href="assets/css/main.css"> <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
-    <style>
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            gap: 20px;
-            padding: 20px;
-        }
-        .form-wrapper {
-            border: 1px solid #ccc;
-            padding: 20px;
-            border-radius: 8px;
-            width: 350px;
-        }
-        h2 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        label {
-            display: block;
-            margin-bottom: 5px;
-            font-weight: bold;
-        }
-        input[type="text"],
-        input[type="email"],
-        input[type="password"] {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-        button {
-            width: 100%;
-            padding: 10px;
-            border: none;
-            border-radius: 4px;
-            color: white;
-            background-color: #5bb9dd; /* Uma cor do template Photon */
-            cursor: pointer;
-            font-weight: bold;
-        }
-        button:hover {
-            background-color: #4caeca;
-        }
-        .error-message {
-            color: red;
-            margin-top: 10px;
-        }
-    </style>
-</head>
-<body class="is-preload">
-    <div id="wrapper">
-        <section id="header">
-            <div class="inner">
-                <h1><a href="index.html">WZZM Escolar</a></h1>
-                <p>Cadastro e Login</p>
-            </div>
-        </section>
-
-        <div class="container">
-            <div class="form-wrapper">
-                <h2>Cadastro</h2>
-    <form id="signupForm" method="POST"> <div class="form-group">
-            <label for="signup-username">Nome de Usuário:</label>
-            <input type="text" id="signup-username" name="username" required>
-        </div>
-        <div class="form-group">
-            <label for="signup-email">Email:</label>
-            <input type="email" id="signup-email" name="email" required>
-        </div>
-        <div class="form-group">
-            <label for="signup-password">Senha:</label>
-            <input type="password" id="signup-password" name="password" required>
-        </div>
-        <div class="form-group">
-            <label for="confirm-password">Confirmar Senha:</label>
-            <input type="password" id="confirm-password" name="confirm_password" required>
-        </div>
-        <button type="submit">Cadastrar</button>
-        <div id="signup-error" class="error-message"></div>
-    </form>
-</div>
-
-<div class="form-wrapper">
-    <h2>Login</h2>
-    <form id="loginForm" method="POST"> <div class="form-group">
-            <label for="login-username">Nome de Usuário ou Email:</label>
-            <input type="text" id="login-username" name="username_or_email" required>
-        </div>
-        <div class="form-group">
-            <label for="login-password">Senha:</label>
-            <input type="password" id="login-password" name="password" required>
-        </div>
-        <button type="submit">Entrar</button>
-        <div id="login-error" class="error-message"></div>
-    </form>
-</div>
-
-            <div class="form-wrapper">
-                <h2>Login</h2>
-                <form id="loginForm" method="POST"> <div class="form-group">
-                        <label for="login-username">Nome de Usuário ou Email:</label>
-                        <input type="text" id="login-username" name="username_or_email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="login-password">Senha:</label>
-                        <input type="password" id="login-password" name="password" required>
-                    </div>
-                    <button type="submit">Entrar</button>
-                    <div id="login-error" class="error-message"></div>
-                </form>
-            </div>
-        </div>
-
-        <section id="footer">
-            <ul class="icons">
-                <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-                <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-                <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-            </ul>
-            <ul class="copyright">
-                <li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-            </ul>
-        </section>
-    </div>
-
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script>
-// Seu código Firebase aqui
-import { initializeApp } from "firebase/app";
-  import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "firebase/auth";
-  import { getDatabase, ref, set, get } from "firebase/database";
-
-  // Your web app's Firebase configuration
+<script>
   const firebaseConfig = {
     apiKey: "AIzaSyB5lqOE-ajoX6w-_ZEu83li0w0GgGamMuQ",
     authDomain: "wzzm-4645a.firebaseapp.com",
     projectId: "wzzm-4645a",
-    storageBucket: "wzzm-4645a.firebasestorage.app",
+    storageBucket: "wzzm-4645a.appspot.com", // corrigido aqui!
     messagingSenderId: "1040192406942",
     appId: "1:1040192406942:web:c518f996455c7078a7828f",
     measurementId: "G-6FLELSDZQJ"
   };
+  firebase.initializeApp(firebaseConfig);
 
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-  const db = getDatabase(app);
-
-  // Função para lidar com o cadastro
   document.getElementById('signupForm').addEventListener('submit', function(event) {
     event.preventDefault();
     const username = document.getElementById('signup-username').value;
@@ -182,57 +26,44 @@ import { initializeApp } from "firebase/app";
       return;
     }
 
-    createUserWithEmailAndPassword(auth, email, password)
+    firebase.auth().createUserWithEmailAndPassword(email, password)
       .then((userCredential) => {
         const user = userCredential.user;
-        return set(ref(db, 'users/' + user.uid), {
+        return firebase.database().ref('users/' + user.uid).set({
           username: username,
           email: email
         });
       })
       .then(() => {
-        console.log('Usuário cadastrado com sucesso!');
-        window.location.href = 'index.html'; // Redirecionar para a página principal após o cadastro
+        window.location.href = 'index.html';
       })
       .catch((error) => {
         signupError.textContent = getErrorMessage(error.code);
       });
   });
 
-  // Função para lidar com o login
   document.getElementById('loginForm').addEventListener('submit', function(event) {
     event.preventDefault();
     const usernameOrEmail = document.getElementById('login-username').value;
     const password = document.getElementById('login-password').value;
     const loginError = document.getElementById('login-error');
-
-    signInWithEmailAndPassword(auth, usernameOrEmail, password)
-      .then((userCredential) => {
-        console.log('Login realizado com sucesso!');
-        window.location.href = 'index.html'; // Redirecionar para a página principal após o login
+    firebase.auth().signInWithEmailAndPassword(usernameOrEmail, password)
+      .then(() => {
+        window.location.href = 'index.html';
       })
       .catch((error) => {
         loginError.textContent = getErrorMessage(error.code);
       });
   });
 
-  // Função para traduzir códigos de erro do Firebase em mensagens amigáveis
   function getErrorMessage(errorCode) {
     switch (errorCode) {
-      case 'auth/email-already-in-use':
-        return 'Este e-mail já está em uso.';
-      case 'auth/invalid-email':
-        return 'O e-mail é inválido.';
-      case 'auth/user-not-found':
-        return 'Usuário não encontrado.';
-      case 'auth/wrong-password':
-        return 'Senha incorreta.';
-      case 'auth/weak-password':
-        return 'A senha é muito fraca.';
-      default:
-        return 'Ocorreu um erro inesperado. Tente novamente.';
+      case 'auth/email-already-in-use': return 'Este e-mail já está em uso.';
+      case 'auth/invalid-email': return 'O e-mail é inválido.';
+      case 'auth/user-not-found': return 'Usuário não encontrado.';
+      case 'auth/wrong-password': return 'Senha incorreta.';
+      case 'auth/weak-password': return 'A senha é muito fraca.';
+      default: return 'Ocorreu um erro inesperado. Tente novamente.';
     }
   }
-    </script>
-</body>
-</html>
+</script>
