--- a/signup.html
+++ b/signup.html
@@ -1,72 +1,225 @@
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyB5lqOE-ajoX6w-_ZEu83li0w0GgGamMuQ",
-    authDomain: "wzzm-4645a.firebaseapp.com",
-    projectId: "wzzm-4645a",
-    storageBucket: "wzzm-4645a.appspot.com",
-    messagingSenderId: "1040192406942",
-    appId: "1:1040192406942:web:c518f996455c7078a7828f",
-    measurementId: "G-6FLELSDZQJ"
-  };
-  firebase.initializeApp(firebaseConfig);
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cadastro e Login - WZZM Escolar</title>
+    <link rel="stylesheet" href="assets/css/main.css">
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+    <style>
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            gap: 20px;
+            padding: 20px;
+        }
+        .form-wrapper {
+            border: 1px solid #ccc;
+            padding: 20px;
+            border-radius: 8px;
+            width: 350px;
+        }
+        h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+        input[type="text"],
+        input[type="email"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            border-radius: 4px;
+            color: white;
+            background-color: #5bb9dd;
+            cursor: pointer;
+            font-weight: bold;
+        }
+        button:hover {
+            background-color: #4caeca;
+        }
+        .error-message {
+            color: red;
+            margin-top: 10px;
+        }
+    </style>
+    <!-- Firebase Compat Libraries -->
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+</head>
+<body class="is-preload">
+    <div id="wrapper">
+        <section id="header">
+            <div class="inner">
+                <h1><a href="index.html">WZZM Escolar</a></h1>
+                <p>Cadastro e Login</p>
+            </div>
+        </section>
 
-  // Cadastro
-  document.getElementById('signupForm').addEventListener('submit', function(event) {
-    event.preventDefault();
-    const username = document.getElementById('signup-username').value;
-    const email = document.getElementById('signup-email').value;
-    const password = document.getElementById('signup-password').value;
-    const confirmPassword = document.getElementById('confirm-password').value;
-    const signupError = document.getElementById('signup-error');
+        <div class="container">
+            <!-- Cadastro -->
+            <div class="form-wrapper">
+                <h2>Cadastro</h2>
+                <!-- REMOVIDO method="POST" -->
+                <form id="signupForm">
+                    <div class="form-group">
+                        <label for="signup-username">Nome de Usuário:</label>
+                        <input type="text" id="signup-username" name="username" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="signup-email">Email:</label>
+                        <input type="email" id="signup-email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="signup-password">Senha:</label>
+                        <input type="password" id="signup-password" name="password" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="confirm-password">Confirmar Senha:</label>
+                        <input type="password" id="confirm-password" name="confirm_password" required>
+                    </div>
+                    <button type="submit">Cadastrar</button>
+                    <div id="signup-error" class="error-message"></div>
+                </form>
+            </div>
 
-    if (password !== confirmPassword) {
-      signupError.textContent = 'As senhas não coincidem.';
-      return;
-    }
+            <!-- Login -->
+            <div class="form-wrapper">
+                <h2>Login</h2>
+                <!-- REMOVIDO method="POST" -->
+                <form id="loginForm">
+                    <div class="form-group">
+                        <label for="login-username">Email:</label>
+                        <input type="email" id="login-username" name="username_or_email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="login-password">Senha:</label>
+                        <input type="password" id="login-password" name="password" required>
+                    </div>
+                    <button type="submit">Entrar</button>
+                    <div id="login-error" class="error-message"></div>
+                </form>
+            </div>
+        </div>
 
-    firebase.auth().createUserWithEmailAndPassword(email, password)
-      .then((userCredential) => {
-        const user = userCredential.user;
-        return firebase.database().ref('users/' + user.uid).set({
-          username: username,
-          email: email
-        });
-      })
-      .then(() => {
-        window.location.href = 'index.html';
-      })
-      .catch((error) => {
-        signupError.textContent = getErrorMessage(error.code);
+        <section id="footer">
+            <ul class="icons">
+                <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+                <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+                <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+            </ul>
+            <ul class="copyright">
+                <li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </section>
+    </div>
+
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script>
+      // Configuração do Firebase
+      // Sua configuração para o projeto wzzm-4645a parece correta!
+      const firebaseConfig = {
+        apiKey: "AIzaSyB5lqOE-ajoX6w-_ZEu83li0w0GgGamMuQ",
+        authDomain: "wzzm-4645a.firebaseapp.com",
+        projectId: "wzzm-4645a",
+        storageBucket: "wzzm-4645a.appspot.com",
+        messagingSenderId: "1040192406942",
+        appId: "1:1040192406942:web:c518f996455c7078a7828f",
+        measurementId: "G-6FLELSDZQJ"
+      };
+      firebase.initializeApp(firebaseConfig);
+
+      // Cadastro
+      document.getElementById('signupForm').addEventListener('submit', function(event) {
+        event.preventDefault(); // Garante que a submissão padrão do formulário seja prevenida
+        const username = document.getElementById('signup-username').value;
+        const email = document.getElementById('signup-email').value;
+        const password = document.getElementById('signup-password').value;
+        const confirmPassword = document.getElementById('confirm-password').value;
+        const signupError = document.getElementById('signup-error');
+
+        signupError.textContent = ''; // Limpa mensagens de erro anteriores
+
+        if (password !== confirmPassword) {
+          signupError.textContent = 'As senhas não coincidem.';
+          return;
+        }
+
+        // Chamada para o Firebase Authentication para criar o usuário
+        firebase.auth().createUserWithEmailAndPassword(email, password)
+          .then((userCredential) => {
+            const user = userCredential.user;
+            // Salvando informações adicionais no Realtime Database
+            return firebase.database().ref('users/' + user.uid).set({
+              username: username,
+              email: email // Salvando email também, se necessário
+            });
+          })
+          .then(() => {
+            // Redireciona após cadastro e salvamento no DB (ajuste o redirecionamento conforme sua necessidade)
+            // É importante que o redirecionamento ocorra DENTRO do .then()
+            window.location.href = 'index.html';
+          })
+          .catch((error) => {
+            // Lida com erros do Firebase Authentication ou Realtime Database
+            signupError.textContent = getErrorMessage(error.code);
+            console.error("Erro no cadastro:", error); // Loga o erro completo no console para debug
+          });
       });
-  });
 
-  // Login
-  document.getElementById('loginForm').addEventListener('submit', function(event) {
-    event.preventDefault();
-    const usernameOrEmail = document.getElementById('login-username').value;
-    const password = document.getElementById('login-password').value;
-    const loginError = document.getElementById('login-error');
-    firebase.auth().signInWithEmailAndPassword(usernameOrEmail, password)
-      .then(() => {
-        window.location.href = 'index.html';
-      })
-      .catch((error) => {
-        loginError.textContent = getErrorMessage(error.code);
+      // Login
+      document.getElementById('loginForm').addEventListener('submit', function(event) {
+        event.preventDefault(); // Garante que a submissão padrão do formulário seja prevenida
+        const email = document.getElementById('login-username').value; // Note: O input está marcado como 'username', mas é usado como email
+        const password = document.getElementById('login-password').value;
+        const loginError = document.getElementById('login-error');
+
+        loginError.textContent = ''; // Limpa mensagens de erro anteriores
+
+        // Chamada para o Firebase Authentication para fazer login
+        firebase.auth().signInWithEmailAndPassword(email, password)
+          .then(() => {
+            // Redireciona após o login bem-sucedido
+             // É importante que o redirecionamento ocorra DENTRO do .then()
+            window.location.href = 'index.html';
+          })
+          .catch((error) => {
+             // Lida com erros do Firebase Authentication
+            loginError.textContent = getErrorMessage(error.code);
+            console.error("Erro no login:", error); // Loga o erro completo no console para debug
+          });
       });
-  });
 
-  // Mensagens amigáveis de erro
-  function getErrorMessage(errorCode) {
-    switch (errorCode) {
-      case 'auth/email-already-in-use': return 'Este e-mail já está em uso.';
-      case 'auth/invalid-email': return 'O e-mail é inválido.';
-      case 'auth/user-not-found': return 'Usuário não encontrado.';
-      case 'auth/wrong-password': return 'Senha incorreta.';
-      case 'auth/weak-password': return 'A senha é muito fraca.';
-      default: return 'Ocorreu um erro inesperado. Tente novamente.';
-    }
-  }
-</script>
+      // Mensagens amigáveis de erro
+      function getErrorMessage(errorCode) {
+        // Mapeamento de códigos de erro do Firebase Auth para mensagens amigáveis
+        // Usei alguns exemplos dos fatos que você forneceu e do Firebase Auth Reference
+        switch (errorCode) {
+          case 'auth/email-already-in-use': return 'Este e-mail já está em uso.';
+          case 'auth/invalid-email': return 'O e-mail é inválido.';
+          case 'auth/user-disabled': return 'Esta conta de usuário foi desativada.';
+          
