--- a/index.html
+++ b/index.html
@@ -17,25 +17,27 @@
 </tbody>
 </table>
 <p>Ensino M&eacute;dio</p>
-<table style="border-collapse: collapse; height: 54px;" border="1">
+<table style="border-collapse: collapse; height: 54px; width: 707px;" border="1">
 <tbody>
 <tr style="height: 36px;">
-<td style="width: 101.141px; text-align: center; height: 36px;"><a href="./ensinomedio/linguaportuguesa.html">Lingua Portugu&ecirc;sa</a></td>
-<td style="width: 101.141px; text-align: center; height: 36px;"><a href="./ensinomedio/matematica.html">Matem&aacute;tica</a></td>
-<td style="width: 101.141px; text-align: center; height: 36px;"><a href="./ensinomedio/ciencias.html">Ci&ecirc;ncias</a></td>
-<td style="width: 101.141px; text-align: center; height: 36px;"><a href="./ensinomedio/historia.html">Hist&oacute;ria</a></td>
-<td style="width: 101.141px; text-align: center; height: 36px;"><a href="./ensinomedio/geografia.html">Geografia</a></td>
-<td style="width: 101.141px; text-align: center; height: 36px;"><a href="./ensinomedio/artes.html">Artes</a></td>
-<td style="width: 101.141px; text-align: center; height: 36px;"><a href="./ensinomedio/educacaofisica.html">Educa&ccedil;&atilde;o F&iacute;sica</a></td>
+<td style="width: 98.9844px; text-align: center; height: 36px;"><a href="./ensinomedio/linguaportuguesa.html">Lingua Portugu&ecirc;sa</a></td>
+<td style="width: 99.2031px; text-align: center; height: 36px;"><a href="./ensinomedio/matematica.html">Matem&aacute;tica</a></td>
+<td style="width: 97.0938px; text-align: center; height: 36px;"><a href="./ensinomedio/ciencias.html">Ci&ecirc;ncias</a></td>
+<td style="width: 97.0312px; text-align: center; height: 36px;"><a href="./ensinomedio/historia.html">Hist&oacute;ria</a></td>
+<td style="width: 98px; text-align: center; height: 36px;"><a href="./ensinomedio/geografia.html">Geografia</a></td>
+<td style="width: 96.7656px; text-align: center; height: 36px;"><a href="./ensinomedio/artes.html">Artes</a></td>
+<td style="width: 97.9219px; text-align: center; height: 36px;"><a href="./ensinomedio/educacaofisica.html">Educa&ccedil;&atilde;o F&iacute;sica</a></td>
 </tr>
 <tr style="height: 18px;">
-<td style="width: 101.141px; text-align: center; height: 18px;"><a href="./ensinomedio/linguainglesa.html">Lingua Ingl&ecirc;sa</a></td>
-<td style="width: 101.141px; text-align: center; height: 18px;"><a href="./ensinomedio/sociologia.html">Sociologia</a></td>
-<td style="width: 101.141px; text-align: center; height: 18px;"><a href="./ensinomedio/fisica.html">F&iacute;sica</a></td>
-<td style="width: 101.141px; text-align: center; height: 18px;"><a href="./ensinomedio/quimica.html">Quimica</a></td>
-<td style="width: 101.141px; text-align: center; height: 18px;"><a href="./ensinomedio/biologia.html">Biologia</a></td>
-<td style="width: 101.141px; text-align: center; height: 18px;"><a href="./ensinomedio/historia.html">Hist&oacute;ria</a></td>
-<td style="width: 101.141px; text-align: center; height: 18px;"><a href="./ensinomedio/filosofia.html">Filosofia</a></td>
+<td style="width: 98.9844px; text-align: center; height: 18px;"><a href="./ensinomedio/linguainglesa.html">Lingua Ingl&ecirc;sa</a></td>
+<td style="width: 99.2031px; text-align: center; height: 18px;"><a href="./ensinomedio/sociologia.html">Sociologia</a></td>
+<td style="width: 97.0938px; text-align: center; height: 18px;"><a href="./ensinomedio/fisica.html">F&iacute;sica</a></td>
+<td style="width: 97.0312px; text-align: center; height: 18px;"><a href="./ensinomedio/quimica.html">Quimica</a></td>
+<td style="width: 98px; text-align: center; height: 18px;"><a href="./ensinomedio/biologia.html">Biologia</a></td>
+<td style="width: 96.7656px; text-align: center; height: 18px;"><a href="./ensinomedio/historia.html">Hist&oacute;ria</a></td>
+<td style="width: 97.9219px; text-align: center; height: 18px;"><a href="./ensinomedio/filosofia.html">Filosofia</a></td>
 </tr>
 </tbody>
 </table>
+<p>Feito com aux&iacute;lio do site: <a href="https://html-online.com/">https://html-online.com/</a></p>
+<p>Editor: Collei "Grigori" Ludwig</p>
