--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h1 style="color: #5e9ca0;">Bem vindo ao WZZM Escolar</h1>
 <h2 style="color: #2e6c80;">Como posso come&ccedil;ar?</h2>
 <p>Aqui voc&ecirc; pode selecionar as mat&eacute;rias nos quais voc&ecirc; precisa.</p>
-<p>Ensino Fundamental</p>
+<p><a href="./ensinofundamental.html">Ensino Fundamental</a>:</p>
 <table style="border-collapse: collapse; width: 100%;" border="1">
 <tbody>
 <tr>
@@ -16,7 +16,7 @@
 </tr>
 </tbody>
 </table>
-<p>Ensino M&eacute;dio</p>
+<p><a href="./ensinomedio.html">Ensino M&eacute;dio</a>:</p>
 <table style="border-collapse: collapse; height: 54px; width: 707px;" border="1">
 <tbody>
 <tr style="height: 36px;">
