--- a/404.html
+++ b/404.html
@@ -78,5 +78,5 @@
 <li data-sourcepos="40:1-40:149"><strong>Erros de JavaScript:</strong> Falhas na execu&ccedil;&atilde;o de scripts JavaScript podem impedir o carregamento correto da p&aacute;gina ou de funcionalidades interativas.</li>
 <li data-sourcepos="41:1-42:0"><strong>Erros de Carregamento de Recurso (Imagens, CSS, etc.):</strong> Um arquivo de imagem, folha de estilo (CSS) ou script n&atilde;o p&ocirc;de ser carregado, resultando em um layout quebrado ou funcionalidades ausentes.</li>
 </ul>
-<p style="text-align: justify;">&nbsp;</p>
+<p style="text-align: justify;">Entre em contato com a WZZM para solicitar informa&ccedil;&otilde;es sobre este erro. O e-mail de contato &eacute; nukephoenixdeveloper@gmail.com</p>
 <p style="text-align: justify;"><strong>&nbsp;</strong></p>
