--- a/ensinofundamental/linguaportuguesa.html
+++ b/ensinofundamental/linguaportuguesa.html
@@ -11,7 +11,7 @@
     <h1>Selecione o ano desejado da matéria:</h1>
 
     <div class="grid">
-      <button onclick="loadContent('portugues/primeiroano.html')">1º Ano</button>
+      <button onclick="loadContent('./p1f/p1f.pdf')">1º Ano</button>
       <button onclick="loadContent('portugues/segundoano.html')">2º Ano</button>
       <button onclick="loadContent('portugues/terceiroano.html')">3º Ano</button>
       <button onclick="loadContent('portugues/quartoano.html')">4º Ano</button>
