--- a/ensinofundamental/matematica.html
+++ b/ensinofundamental/matematica.html
@@ -3,15 +3,15 @@
 <table style="border-collapse: collapse; width: 100%;" border="1">
 <tbody>
 <tr>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/primeiroano.html">Primeiro</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/segundoano.html">Segundo</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/terceiroano.html">Terceiro</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/quartoano.html">Quarto</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/quintoano.html">Quinto</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/sextoano.html">Sexto</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/setimoano.html">S&eacute;timo</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/oitavoano.html">Oitavo</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/nonoano.html">Nono</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/primeiroano.pdf">Primeiro</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/segundoano.pdf">Segundo</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/terceiroano.pdf">Terceiro</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/quartoano.pdf">Quarto</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/quintoano.pdf">Quinto</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/sextoano.pdf">Sexto</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/setimoano.pdf">S&eacute;timo</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/oitavoano.pdf">Oitavo</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/nonoano.pdf">Nono</a></td>
 </tr>
 </tbody>
 </table>
