--- a/ensinofundamental/matematica.html
+++ b/ensinofundamental/matematica.html
@@ -1,17 +1,30 @@
-<!-- ####### HEY, I AM THE SOURCE EDITOR! #########-->
-<h1 style="color: #5e9ca0;">Selecione o ano desejado da mat&eacute;ria:</h1>
-<table style="border-collapse: collapse; width: 100%;" border="1">
-<tbody>
-<tr>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/primeiroano.pdf">Primeiro</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/segundoano.pdf">Segundo</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/terceiroano.pdf">Terceiro</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/quartoano.pdf">Quarto</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/quintoano.pdf">Quinto</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/sextoano.pdf">Sexto</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/setimoano.pdf">S&eacute;timo</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/oitavoano.pdf">Oitavo</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/matematica/nonoano.pdf">Nono</a></td>
-</tr>
-</tbody>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Selecione o Ano</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+<h1>Selecione o ano desejado da matéria:</h1>
+
+<table>
+    <tbody>
+        <tr>
+            <td><a href="./ensinofundamental/matematica/primeiroano.pdf">Primeiro</a></td>
+            <td><a href="./ensinofundamental/matematica/segundoano.pdf">Segundo</a></td>
+            <td><a href="./ensinofundamental/matematica/terceiroano.pdf">Terceiro</a></td>
+            <td><a href="./ensinofundamental/matematica/quartoano.pdf">Quarto</a></td>
+            <td><a href="./ensinofundamental/matematica/quintoano.pdf">Quinto</a></td>
+            <td><a href="./ensinofundamental/matematica/sextoano.pdf">Sexto</a></td>
+            <td><a href="./ensinofundamental/matematica/setimoano.pdf">Sétimo</a></td>
+            <td><a href="./ensinofundamental/matematica/oitavoano.pdf">Oitavo</a></td>
+            <td><a href="./ensinofundamental/matematica/nonoano.pdf">Nono</a></td>
+        </tr>
+    </tbody>
 </table>
+
+</body>
+</html>
