--- a/ensinofundamental/historia.html
+++ b/ensinofundamental/historia.html
@@ -1,9 +1,19 @@
 
-<!-- ####### HEY, I AM THE SOURCE EDITOR! #########-->
-<h1 style="color: #5e9ca0;">Selecione o ano desejado da mat&eacute;ria:</h1>
-<table style="border-collapse: collapse; width: 100%;" border="1">
-<tbody>
-<tr>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Selecione o Ano</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+<h1>Selecione o ano desejado da matéria:</h1>
+
+<table>
+    <tbody>
+        <tr>
 <td style="width: 11.1111%;"><a href="./ensinofundamental/historia/primeiroano.html">Primeiro</a></td>
 <td style="width: 11.1111%;"><a href="./ensinofundamental/historia/segundoano.html">Segundo</a></td>
 <td style="width: 11.1111%;"><a href="./ensinofundamental/historia/terceiroano.html">Terceiro</a></td>
@@ -16,3 +26,6 @@
 </tr>
 </tbody>
 </table>
+
+  </body>
+</html>
