--- a/ensinofundamental/matematica.html
+++ b/ensinofundamental/matematica.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selecione o Ano</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
+
 
 <h1>Selecione o ano desejado da matéria:</h1>
 
