--- a/ensinofundamental/matematica.html
+++ b/ensinofundamental/matematica.html
@@ -14,15 +14,15 @@
 <table>
     <tbody>
         <tr>
-            <td><a href="./ensinofundamental/matematica/primeiroano.pdf">Primeiro</a></td>
-            <td><a href="./ensinofundamental/matematica/segundoano.pdf">Segundo</a></td>
-            <td><a href="./ensinofundamental/matematica/terceiroano.pdf">Terceiro</a></td>
-            <td><a href="./ensinofundamental/matematica/quartoano.pdf">Quarto</a></td>
-            <td><a href="./ensinofundamental/matematica/quintoano.pdf">Quinto</a></td>
-            <td><a href="./ensinofundamental/matematica/sextoano.pdf">Sexto</a></td>
-            <td><a href="./ensinofundamental/matematica/setimoano.pdf">Sétimo</a></td>
-            <td><a href="./ensinofundamental/matematica/oitavoano.pdf">Oitavo</a></td>
-            <td><a href="./ensinofundamental/matematica/nonoano.pdf">Nono</a></td>
+            <td><a href="./p1f/p2mf.pdf">Primeiro</a></td>
+            <td><a href="./p1f/segundoano.pdf">Segundo</a></td>
+            <td><a href="./p1f/terceiroano.pdf">Terceiro</a></td>
+            <td><a href="./p1f/quartoano.pdf">Quarto</a></td>
+            <td><a href="./p1f/quintoano.pdf">Quinto</a></td>
+            <td><a href="./p1f/sextoano.pdf">Sexto</a></td>
+            <td><a href="./p1f/setimoano.pdf">Sétimo</a></td>
+            <td><a href="./p1f/oitavoano.pdf">Oitavo</a></td>
+            <td><a href="./p1f/nonoano.pdf">Nono</a></td>
         </tr>
     </tbody>
 </table>
