--- a/ensinofundamental/ciencias.html
+++ b/ensinofundamental/ciencias.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!DOCTYPE pdf>
+<pdf lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,17 +11,17 @@
 <table style="border-collapse: collapse; width: 100%;" border="1">
 <tbody>
 <tr>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/primeiroano.html">Primeiro</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/segundoano.html">Segundo</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/terceiroano.html">Terceiro</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/quartoano.html">Quarto</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/quintoano.html">Quinto</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/sextoano.html">Sexto</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/setimoano.html">S&eacute;timo</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/oitavoano.html">Oitavo</a></td>
-<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/nonoano.html">Nono</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2cf.pdf">Primeiro</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2cg.pdf">Segundo</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2ch.pdf">Terceiro</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2ck.pdf">Quarto</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2cl.pdf">Quinto</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2cm.pdf">Sexto</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2cp.pdf">S&eacute;timo</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2cr.pdf">Oitavo</a></td>
+<td style="width: 11.1111%;"><a href="./ensinofundamental/ciencias/p2cs.pdf">Nono</a></td>
 </tr>
 </tbody>
 </table>
 </body>
-</html>
+</pdf>
