--- a/ensinofundamental/artes.html
+++ b/ensinofundamental/artes.html
@@ -61,14 +61,14 @@
     <tbody>
         <tr>
             <td><a href="./p1f/p987f.pdf">Primeiro</a></td>
-            <td><a href="./p1f/segundoano.pdf">Segundo</a></td>
-            <td><a href="./p1f/terceiroano.pdf">Terceiro</a></td>
-            <td><a href="./p1f/quartoano.pdf">Quarto</a></td>
-            <td><a href="./p1f/quintoano.pdf">Quinto</a></td>
-            <td><a href="./p1f/sextoano.pdf">Sexto</a></td>
-            <td><a href="./p1f/setimoano.pdf">Sétimo</a></td>
-            <td><a href="./p1f/oitavoano.pdf">Oitavo</a></td>
-            <td><a href="./p1f/nonoano.pdf">Nono</a></td>
+            <td><a href="./p1f/p987g.pdf">Segundo</a></td>
+            <td><a href="./p1f/p987g2.pdf">Terceiro</a></td>
+            <td><a href="./p1f/p987t.pdf">Quarto</a></td>
+            <td><a href="./p1f/p987h.pdf">Quinto</a></td>
+            <td><a href="./p1f/p9878.pdf">Sexto</a></td>
+            <td><a href="./p1f/p987fgd.pdf">Sétimo</a></td>
+            <td><a href="./p1f/p987frtpdf">Oitavo</a></td>
+            <td><a href="./p1f/p987fdd2.pdf">Nono</a></td>
         </tr>
     </tbody>
 </table>
